# vec

./: CMakeLists.txt
include/vec/: vec.h
src/: vec.c
